--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
   <tr>
     <td>
       <h2>Signup</h2>
-      <%= form_for :create, url: welcome_create_path do |f| %>
+      <%= form_for :create, url: welcome_create_path, html: { id: "create_form" } do |f| %>
         <p>
           <%= f.label :username %><br>
           <%= f.text_field :username %>
@@ -15,10 +15,11 @@
         </p>
         <p>
           <%= f.label :confirm_password %><br>
-          <%= f.password_field :confirm_password %>
+          <%= f.password_field :confirm_password%>
         </p>
+        <p id="create_error"></p>
         <p>
-          <%= f.submit "Sign up" %>
+          <%= f.submit "Sign up", onclick: "return check_create_form();" %>
         </p>
       <% end %>
     </td>
@@ -34,8 +35,9 @@
           <%= f.label :password %><br>
           <%= f.password_field :password %>
         </p>
+        <p id="login_error"></p>
         <p>
-          <%= f.submit "Login" %>
+          <%= f.submit "Login", onclick: "return check_login_form();" %>
         </p>
       <% end %>
     </td>
