--- a/app/views/cards/view_cards.html.erb
+++ b/app/views/cards/view_cards.html.erb
@@ -2,18 +2,19 @@
 <table>
   <% @cards.each do |c| %>
     <tr class="card">
-      <td><%= c['name'] %></td>
-      <td><%= c['cost'] %></td>
+      <td><%= c[:name] %></td>
+      <td><%= c[:cost] %></td>
       <!-- power and toughness -->
-      <td><%= (c['atk'].nil? or c['hp'].nil?) ? "" : c['atk'].to_s + "/" + c['hp'].to_s %></td>
+      <td><%= (c[:atk].nil? or c[:hp].nil?) ? "" : c[:atk].to_s + "/" + c[:hp].to_s %></td>
       <!-- terrain mods -->
       <td><% @terrain_mods.each_with_index do |e, i| %><%= unless c[e].nil? then e + " " + c[e] end %><% end %></td>
     </tr>
     <tr class="hidden">
-      <td colspan=3><%= c['race'] + (c['profession'].nil? ? "" : " - " + c['profession']) %></td>
+      <td colspan=3><%= c[:race] + (c[:profession].nil? ? "" : " - " + c[:profession]) %></td>
     </tr>
     <tr class="hidden">
-      <td colspan=3><%= c['ability'] %></td>
+      <td colspan=3><%= c[:ability] %></td>
     </tr>
+    <% print session[:user] %>
   <% end %>
 </table>
