cleaned up directories and added delete functionality

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -15,8 +15,9 @@
     <tr class="hidden">
       <td colspan=4><%= c[:ability] %></td>
     </tr>
+    <!-- edit/delete buttons -->
     <tr class="hidden">
-      <td><button class="edit_button" value="<%= c[:id] %>">Edit</button></td>
+      <td><button class="edit_button" value="<%= c[:id] %>">Edit</button><button class="delete_button" value="<%= c[:id] %>">Delete</button></td>
     </tr>
   <% end %>
 </table>
