added header and footer to non-welcome views

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -16,7 +16,7 @@
       <td colspan=4><%= c[:ability] %></td>
     </tr>
     <!-- edit/delete buttons -->
-    <% if session[:card] %>
+    <% if @sess_card %>
       <tr class="hidden">
         <td><button class="edit_button" value="<%= c[:id] %>">Edit</button><button class="delete_button" value="<%= c[:id] %>">Delete</button></td>
       </tr>
