--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,19 +1,24 @@
 <h2>Card list</h2>
 <table>
   <% @cards.each do |c| %>
-    <tr class="card">
-      <td><%= c[:name] %></td>
+    <tr class="card <%= cycle("odd", "even") %>">
+      <td colspan=2><%= c[:name] %></td>
       <td><%= c[:cost] %></td>
-      <!-- power and toughness -->
-      <td><%= (c[:atk].nil? or c[:hp].nil?) ? "" : c[:atk].to_s + "/" + c[:hp].to_s %></td>
+    </tr>
+    <tr class="hidden <%= current_cycle %>">
+      <!-- type | race - profession -->
+      <td><%= c.type[:name].capitalize + (c[:race].empty? ? "" : " | " + c[:race]) + (c[:profession].empty? ? "" : " - " + c[:profession]) %></td>
+      <!-- chroma type -->
+      <td><%= c.chroma.to_a.map { |x| x[:name].capitalize }.join("/") %></td>
+      <!-- atk/hp -->
+      <td>
+        <div><%= (c[:atk].nil? or c[:hp].nil?) ? "" : c[:atk].to_s + "/" + c[:hp].to_s %></div>
       <!-- terrain mods -->
-      <td><% @terrain_mods.each_with_index do |e, i| %><%= unless c[e].nil? then e + " " + c[e].to_s end %><% end %></td>
+        <div><% @terrain_mods.each_with_index do |e, i| %><%= unless c[e].nil? then e + " " + c[e].to_s end %><% end %></div>
+      </td>
     </tr>
-    <tr class="hidden">
-      <td colspan=4><%= c.type[:name].capitalize + (c[:race].empty? ? "" : " | " + c[:race]) + (c[:profession].empty? ? "" : " - " + c[:profession]) %></td>
-    </tr>
-    <tr class="hidden">
-      <td colspan=4><%= c[:ability] %></td>
+    <tr class="hidden <%= current_cycle %>">
+      <td colspan=3><%= c[:ability] %></td>
     </tr>
     <!-- edit/delete buttons -->
     <% if @sess_card %>
